1998-05-18  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

	* extra.cc (jjSYSTEM): changed "whoami" --> "Singular", added
	"nblocks" 

Sat May 16 14:14:20 MET DST 1998 hannes
* avoid multiple objects of the same name (fix keepring)
Fri May 15 18:02:57 MET DST 1998 hannes
* added type conversion: ideal(map) -> map
Fri May 15 13:06:32 MET DST 1998 hannes
* added syntax: kill (....)
Thu May 14 16:40:43 MET DST 1998 hannes
* fixed bug in CoeffOfKBase (ideals.cc)
Thu May 14 12:01:53 MET DST 1998 hannes
* a ring with a coeff. field GF(p,n) cannot be constructed
  without gftables (ring.cc)
Wed May 13 16:52:09 MET DST 1998 hannes
	* changed syntax of NOT (does not require () any more)
Tue May 12 16:58:13 MET DST 1998 hannes
	* changed return type of option(): none -> string
Tue May 12 11:57:50 MET DST 1998 hannes
	* added "lres"
1998-05-08  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

	* extra.cc (jjSYSTEM): put all undocumented system calls into
	#ifdef HAVE_EXTENDED_SYSTEM which is _not_ defined by default

	* exteded system("random") to always return the seed of the random 
	generator
vThu May  7 19:49:34 MET DST 1998 hannes
        * added syntax rule "proc <name> <arglist> <string> <body>"
	* speedup for feReadLine
Thu Apr 30 19:16:45 MET DST 1998 hannes
	* fixed "missing e-o-buffer" for long lines in febase.inc
Wed Apr 29 18:26:19 MET DST 1998 hannes
	* added filed list_length tossyStrategy
	( for conversion list <-> resolution): syz.h, syz1.cc, iparith.cc
1998-04-29  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

	* mmutil.c (mmGetIndex): new implementation: Use generated lookup
	table (mmutil.inc) instead of "binary" search on size

Tue Apr 28 19:56:46 MET DST 1998 hannes
  * ipassign.cc: fixed assignment of resolution to list: need ipMoveId
1998-04-28  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

	* kstd2.cc (redHomog): Some more ouput for KDEBUG && TEST_OPT_DEBUG

	* mminit.cc: introduced memory(2) which measures physical memory